common/src/java/org/safehaus/penrose/schema/SchemaParser.java
/* Generated By:JavaCC: Do not edit this line. SchemaParser.java */
/**
 * Copyright 2009 Red Hat, Inc.
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 */
package org.safehaus.penrose.schema;

import java.util.*;

/**
 * LDAP Schema Parser.
 *
 * <h3>Grammar for the LDAP v3 Schema</h3>
 *
 * See also: http://www.geocities.com/raoavm/ldapdesign.html
 *
 * <pre>
 *       AttributeTypeDescription = "(" whsp
 *             numericoid whsp              ; AttributeType identifier
 *           [ "NAME" qdescrs ]             ; name used in AttributeType
 *           [ "DESC" qdstring ]            ; description
 *           [ "OBSOLETE" whsp ]
 *           [ "SUP" woid ]                 ; derived from this other
 *                                          ; AttributeType
 *           [ "EQUALITY" woid              ; Matching Rule name
 *           [ "ORDERING" woid              ; Matching Rule name
 *           [ "SUBSTR" woid ]              ; Matching Rule name
 *           [ "SYNTAX" whsp noidlen whsp ] ; see section 4.3
 *           [ "SINGLE-VALUE" whsp ]        ; default multi-valued
 *           [ "COLLECTIVE" whsp ]          ; default not collective
 *           [ "NO-USER-MODIFICATION" whsp ]; default user modifiable
 *           [ "USAGE" whsp AttributeUsage ]; default userApplications
 *           whsp ")"
 *
 *       AttributeUsage =
 *           "userApplications"     /
 *           "directoryOperation"   /
 *           "distributedOperation" / ; DSA-shared
 *           "dSAOperation"          ; DSA-specific, value depends on server
 * </pre>
 *
 * From RFC 2252:
 *
 * <pre>
 *       ObjectClassDescription = "(" whsp
 *           numericoid whsp      ; ObjectClass identifier
 *           [ "NAME" qdescrs ]
 *           [ "DESC" qdstring ]
 *           [ "OBSOLETE" whsp ]
 *           [ "SUP" oids ]       ; Superior ObjectClasses
 *           [ ( "ABSTRACT" / "STRUCTURAL" / "AUXILIARY" ) whsp ]
 *                                ; default structural
 *           [ "MUST" oids ]      ; AttributeTypes
 *           [ "MAY" oids ]       ; AttributeTypes
 *       whsp ")"
 * </pre>
 *
 *
 * <h3>Example to use this SchemaParser</h3>
 *
 * <pre>
 * Reader in = ...;
 * SchemaParser parser = new SchemaParser(in);
 * List schema = parser.parse();
 * List errors = parser.getErrors();
 * </pre>
 *
 * Alternatively, you could also call getSchema() to get the List of schema.
 */
public class SchemaParser implements SchemaParserConstants {

  Schema schema = new Schema();
  List errors = new ArrayList();

  /**
   * Start parsing
   * @return the list of schema
   */
  public Schema parse() throws ParseException {
    try {
      Schema();
    } catch (ParseException ex) {
    }
    return this.schema;
  }

  /**
   * Get the list of schema from parsing
   */
  public Schema getSchema() {
    return this.schema;
  }

  /**
   * Get the list of errors from parsing
   */
  public List getErrors() {
    return this.errors;
  }

  final public void Schema() throws ParseException {
        AttributeType at;
        ObjectClass oc;
    label_1:
    while (true) {
      ;
      if (jj_2_1(2147483647)) {
        at = AttributeType();
                                       schema.addAttributeType(at);
      } else if (jj_2_2(2147483647)) {
        oc = ObjectClass();
                                     schema.addObjectClass(oc);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public AttributeType AttributeType() throws ParseException {
        AttributeType at = new AttributeType();
        /* default values */
        at.setObsolete(false);
        at.setSingleValued(false);
        at.setCollective(false);
        at.setModifiable(true);
        /* variables */
        String oid;
        List names = new ArrayList();
        String desc;
        String sup, equality, ordering, substr;
        String syntax;
        String usage;
    if (jj_2_17(5)) {
      jj_consume_token(ATTRIBUTETYPE);
      jj_consume_token(LPAREN);
      oid = numericoid();
                             at.setOid(oid);
      label_2:
      while (true) {
        if (jj_2_3(5)) {
          ;
        } else {
          break label_2;
        }
        if (jj_2_4(5)) {
          jj_consume_token(NAME);
          names = qdescrs();
                                           at.setNames(names);
        } else if (jj_2_5(5)) {
          jj_consume_token(DESC);
          desc = qdstring();
                                           at.setDescription(desc);
        } else if (jj_2_6(5)) {
          jj_consume_token(OBSOLETE);
                             at.setObsolete(true);
        } else if (jj_2_7(5)) {
          jj_consume_token(SUP);
          sup = woid();
                                     at.setSuperClass(sup);
        } else if (jj_2_8(5)) {
          jj_consume_token(EQUALITY);
          equality = woid();
                                               at.setEquality(equality);
        } else if (jj_2_9(5)) {
          jj_consume_token(ORDERING);
          ordering = woid();
                                               at.setOrdering(ordering);
        } else if (jj_2_10(5)) {
          jj_consume_token(SUBSTR);
          substr = woid();
                                           at.setSubstring(substr);
        } else if (jj_2_11(5)) {
          jj_consume_token(SYNTAX);
          syntax = noidlen();
                                              at.setSyntax(syntax);
        } else if (jj_2_12(5)) {
          jj_consume_token(SINGLE_VALUE);
                                 at.setSingleValued(true);
        } else if (jj_2_13(5)) {
          jj_consume_token(COLLECTIVE);
                               at.setCollective(true);
        } else if (jj_2_14(5)) {
          jj_consume_token(NO_USER_MODIFICATION);
                                         at.setModifiable(false);
        } else if (jj_2_15(5)) {
          jj_consume_token(USAGE);
          usage = AttributeUsage();
                                                   at.setUsage(usage);
        } else if (jj_2_16(5)) {
          jj_consume_token(X_PARAMETER);
          qdstring();

        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RPAREN);
                   {if (true) return at;}
    } else {
      error_skipto(RPAREN);
                                       {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  final public ObjectClass ObjectClass() throws ParseException {
        ObjectClass oc = new ObjectClass();
        /* variables */
        String oid;
        List names;
        String desc;
        List sup, must, may;
        String type;
    if (jj_2_29(5)) {
      jj_consume_token(OBJECTCLASS);
      jj_consume_token(LPAREN);
      oid = numericoid();
                             oc.setOid(oid);
      label_3:
      while (true) {
        if (jj_2_18(5)) {
          ;
        } else {
          break label_3;
        }
        if (jj_2_19(5)) {
          jj_consume_token(NAME);
          names = qdescrs();
                                           oc.setNames(names);
        } else if (jj_2_20(5)) {
          jj_consume_token(DESC);
          desc = qdstring();
                                           oc.setDescription(desc);
        } else if (jj_2_21(5)) {
          jj_consume_token(OBSOLETE);
                             oc.setObsolete(true);
        } else if (jj_2_22(5)) {
          jj_consume_token(SUP);
          sup = oids();
                                     oc.setSuperClasses(sup);
        } else if (jj_2_23(5)) {
          jj_consume_token(ABSTRACT);
                             oc.setType(ObjectClass.ABSTRACT);
        } else if (jj_2_24(5)) {
          jj_consume_token(STRUCTURAL);
                               oc.setType(ObjectClass.STRUCTURAL);
        } else if (jj_2_25(5)) {
          jj_consume_token(AUXILIARY);
                              oc.setType(ObjectClass.AUXILIARY);
        } else if (jj_2_26(5)) {
          jj_consume_token(MUST);
          must = oids();
                                       oc.setRequiredAttributes(must);
        } else if (jj_2_27(5)) {
          jj_consume_token(MAY);
          may = oids();
                                     oc.setOptionalAttributes(may);
        } else if (jj_2_28(5)) {
          jj_consume_token(X_PARAMETER);
          qdstring();

        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RPAREN);
                   {if (true) return oc;}
    } else {
      error_skipto(RPAREN);
                                       {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  final public String AttributeUsage() throws ParseException {
    if (jj_2_30(5)) {
      jj_consume_token(USER_APPLICATIONS);
                                  {if (true) return AttributeType.USER_APPLICATIONS;}
    } else if (jj_2_31(5)) {
      jj_consume_token(DIRECTORY_OPERATION);
                                  {if (true) return AttributeType.DIRECTORY_OPERATION;}
    } else if (jj_2_32(5)) {
      jj_consume_token(DISTRIBUTED_OPERATION);
                                  {if (true) return AttributeType.DISTRIBUTED_OPERATION;}
    } else if (jj_2_33(5)) {
      jj_consume_token(DSA_OPERATION);
                                  {if (true) return AttributeType.DSA_OPERATION;}
    } else if (jj_2_34(5)) {
      jj_consume_token(DSA_OPERATION2);
                                  {if (true) return AttributeType.DSA_OPERATION;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/**
 * globally unique OID in dotted-decimal form.
 */
  final public String numericoid() throws ParseException {
        Token t;
        StringBuilder sb = new StringBuilder();
    t = jj_consume_token(DIGIT);
                      sb.append(t.toString());
    label_4:
    while (true) {
      if (jj_2_35(5)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(DOT);
      t = jj_consume_token(DIGIT);
                              sb.append("." + t.toString());
    }
          {if (true) return sb.toString();}
    throw new Error("Missing return statement in function");
  }

/**
 * single quoted string.
 */
  final public String qdstring() throws ParseException {
        Token t;
        String s;
    t = jj_consume_token(QDSTRING);
                         s = t.toString(); s = s.substring(1, s.length()-1); {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

/**
 * single quoted identifier.
 */
  final public String qdident() throws ParseException {
        Token t;
        String s;
    if (jj_2_36(5)) {
      t = jj_consume_token(QDSTRING);
                         s = t.toString(); s = s.substring(1, s.length()-1); {if (true) return s;}
    } else if (jj_2_37(5)) {
      t = jj_consume_token(IDENT);
                      s = t.toString(); {if (true) return s;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/**
 * one or more names.
 */
  final public List qdescrs() throws ParseException {
        String s;
        List l = new ArrayList();
    if (jj_2_39(5)) {
      s = qdident();
                        l.add(s); {if (true) return l;}
    } else if (jj_2_40(5)) {
      jj_consume_token(LPAREN);
      label_5:
      while (true) {
        s = qdident();
                                  l.add(s);
        if (jj_2_38(5)) {
          ;
        } else {
          break label_5;
        }
      }
      jj_consume_token(RPAREN);
                   {if (true) return l;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/**
 * syntax OID.
 */
  final public String noidlen() throws ParseException {
        String s;
    s = woid();
                     {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

/**
 * either the name or OID optionally followed by a length specifier.
 */
  final public String woid() throws ParseException {
        Token t;
        String s;
    if (jj_2_42(5)) {
      s = qdident();
                        {if (true) return s;}
    } else if (jj_2_43(5)) {
      s = numericoid();
      if (jj_2_41(5)) {
        jj_consume_token(LBRACE);
        t = jj_consume_token(DIGIT);
        jj_consume_token(RBRACE);
                                          s += "{" + t.toString() + "}";
      } else {
        ;
      }
          {if (true) return s;}
    } else if (jj_2_44(5)) {
      t = jj_consume_token(OBJECTCLASS);
                            {if (true) return t.toString();}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/**
 * list of OIDs.
 */
  final public List oids() throws ParseException {
        String s;
        List oids = new ArrayList();
    if (jj_2_46(5)) {
      s = woid();
                     oids.add(s); {if (true) return oids;}
    } else if (jj_2_47(5)) {
      jj_consume_token(LPAREN);
      s = woid();
                             oids.add(s);
      label_6:
      while (true) {
        if (jj_2_45(5)) {
          ;
        } else {
          break label_6;
        }
        jj_consume_token(DOLLAR);
        s = woid();
                                        oids.add(s);
      }
      jj_consume_token(RPAREN);
                   {if (true) return oids;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  void error_skipto(int token) throws ParseException {
  ParseException e = generateParseException();  // generate the exception object.
  // System.out.println(e.getMessage());  // print the error message
  errors.add(e.getMessage());
  Token t;
  do {
    t = getNextToken();
  } while (t.kind != token && t.kind != EOF);
    // The above loop consumes tokens all the way up to a token of
    // "kind".  We use a do-while loop rather than a while because the
    // current token is the one immediately before the erroneous token
    // (in our case the token immediately before what should have been
    // "if"/"while".
  if (t.kind == EOF) throw e;
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  final private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  final private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  final private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  final private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  final private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  final private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  final private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  final private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  final private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  final private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  final private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  final private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  final private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  final private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  final private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  final private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  final private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  final private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  final private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  final private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  final private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  final private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  final private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
